--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,7 +9,8 @@
   <div class="col-x-12">
     <app-recipe-item
       *ngFor="let item of recipes"
-      [recipe]="item">
+      [recipe]="item"
+      (recipeSelected)="onRecipeSelected(item)">
     </app-recipe-item>
   </div>
 </div>
