--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,13 +4,12 @@
   </div>
 </div>
 <hr>
-
 <div class="row">
-  <div class="col-x-12">
+  <div class="col-xs-12">
     <app-recipe-item
-      *ngFor="let item of recipes"
-      [recipe]="item"
-      (recipeSelected)="onRecipeSelected(item)">
-    </app-recipe-item>
+      *ngFor="let recipeEl of recipes"
+      [recipe]="recipeEl"
+      (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipe-item>
   </div>
 </div>
+
