--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,8 +3,12 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="submit"
+                  class="btn btn-success"
+                  [disabled]="!recipeForm.valid">
+              Save
+          </button>
+          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
 
@@ -27,14 +31,15 @@
             <input type="text"
                    id="imagePath"
                    class="form-control"
-                   formControlName="imagePath">
+                   formControlName="imagePath"
+                   #imageURL>
           </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="imageURL.value" class="img-responsive">
         </div>
       </div>
 
@@ -54,7 +59,7 @@
 
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
-          <div class="row"
+          <div class="row populated-ingredients"
                *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i=index"
                [formGroupName]="i">
             <div class="col-xs-8">
@@ -64,9 +69,21 @@
               <input type="number" class="form-control" formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button class="btn btn-danger"
+                      type="button"
+                      (click)="onDeleteIngredient(i)">
+                X</button>
             </div>
           </div>
+
+          <hr>
+
+        <div class="row">
+          <div class="col-xs-12">
+            <button class="btn btn-success" type="button" (click)="onAddIngredient()">Add Ingredient</button>
+          </div>
+        </div>
+
         </div>
       </div>
     </form>
